--- a/src/main/webapp/modifyAFlight.html
+++ b/src/main/webapp/modifyAFlight.html
@@ -24,7 +24,7 @@
                         <form class="plan-flight-form" id="plan_flight_form"> 
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="flight_id" id="flight_id" placeholder="Flight ID"/>
+                                <input type="number" name="flight_id" id="flight_id" placeholder="Flight ID"/>
                             </div>
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
