--- a/src/main/webapp/modifyUser.html
+++ b/src/main/webapp/modifyUser.html
@@ -31,23 +31,19 @@
                         <form class="modify-user-form" id="modify-user-form"> 
                             <div class="form-group">
                                 <label for="firstname"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="firstname" id="firstname" placeholder="Your firstname"/>
+                                <input type="text" name="firstname" id="firstname" required placeholder="Your firstname"/>
                             </div>
                             <div class="form-group">
                                 <label for="lastname"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="lastname" id="lastname" placeholder="Your lastname"/>
-                            </div>
-                            <div class="form-group">
-                                <label for="email"><i class="zmdi zmdi-email"></i></label>
-                                <input type="email" name="email" id="email" placeholder="Your Email"/>
+                                <input type="text" name="lastname" id="lastname" required placeholder="Your lastname"/>
                             </div>
                             <div class="form-group">
                                 <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="password" id="password" placeholder="Password"/>
+                                <input type="password" name="password" id="password" required placeholder="Password"/>
                             </div>
                             <div class="form-group">
                                 <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-                                <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password"/>
+                                <input type="password" name="re_pass" id="re_pass" required placeholder="Repeat your password"/>
                             </div>
                             <div class="form-group form-button">
                                 <input type="submit" name="valid" id="valid" class="form-submit" value="Valid"/>
