--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -63,10 +63,10 @@
 					<tr>
 						<th>Id</th>
 						<th>Trajectory</th>
+						<th>Departure date</th>
 						<th>Departure time</th>
-						<th>Departure airfield</th>
+						<th>Arrival date</th>
 						<th>Arrival time</th>
-						<th>Arrival airfield</th>
 						<th>Price</th>
 						<th>Seats available</th>
 						<th>Pilot</th>
