--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/home.css">
+	<link rel="stylesheet" href="css/jquery.datetimepicker.min.css">
 	
 </head>
 
@@ -47,7 +48,7 @@
 									<input type="text" name="dep" class="textboxstyle" id="date" placeholder="Date">
 								</div>
 								<div class="persent-one less-btn">
-									<input type="Submit" name="submit" value="Search" id="btn-search" class="btn btn-info cst-btn"
+									<input type="submit" name="submit" value="Search" id="btn-search" class="btn btn-info cst-btn"
 										id="srch">
 								</div>
 							</div>
@@ -82,6 +83,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="js/navbuttons.js"></script>
+	<script src="vendor/jquery.datetimepicker.full.min.js"></script>
 	<script src="js/home.js"></script>
 </body>
 
